mule-user-guide/v/3.3/transports-reference.adoc
= Available Transports

* <<Mule Transports>>
* <<Transport Matrix>>

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:/mule-user-guide/v/3.3/modules-reference[Modules Reference]. For more information on transports, see the following topics:

* link:/mule-user-guide/v/3.3/connecting-using-transports[About Transports]
* link:/mule-user-guide/v/3.3/configuring-a-transport[Configuring a Transport]
* link:/mule-user-guide/v/3.3/creating-transports[Creating Transports]

== Mule Transports

[width="100%",cols="50%,50%",options="header",]
|===
|Transport |Description
|link:/mule-user-guide/v/3.3/ajax-transport-reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|http://www.mulesoft.org/display/ABDERA/Home[Abdera Transport] |Allows you to easily integrate with Atom feeds and Atom Publishing Protocol servers via the http://incubator.apache.org/abdera[Apache Abdera] project.

|link:/mule-user-guide/v/3.3/ejb-transport-reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:/mule-user-guide/v/3.3/email-transport-reference[Email Transport] |This transport supplies various email connectivity options.
|link:/mule-user-guide/v/3.3/file-transport-reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:/mule-user-guide/v/3.3/ftp-transport-reference[FTP Transport] |Allows files to be read / written to a remote FTP server.
|link:/mule-user-guide/v/3.3/http-transport-reference[HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:/mule-user-guide/v/3.3/https-transport-reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:/mule-user-guide/v/3.3/imap-transport-reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:/mule-user-guide/v/3.3/imap-transport-reference[IMAPS Transport] |A secure version of the IMAP transport.
|link:/mule-user-guide/v/3.3/jdbc-transport-reference[JDBC Transport] +
*Enterprise Edition* |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:/mule-user-guide/v/3.3/jetty-transport-reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:/mule-user-guide/v/3.3/jetty-ssl-transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:/mule-user-guide/v/3.3/jms-transport-reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|http://www.mulesoft.org/display/LDAP[LDAP Transport] |Allows you to send and receive Mule Messages to/from an LDAP directory.
|link:/mule-user-guide/v/3.3/pop3-transport-reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:/mule-user-guide/v/3.3/pop3-transport-reference[POP3S Transport] |A secure version of the POP3 transport.
|link:/mule-user-guide/v/3.3/quartz-transport-reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|link:/mule-user-guide/v/3.3/rmi-transport-reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:/mule-user-guide/v/3.3/servlet-transport-reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:/mule-user-guide/v/3.3/smtp-transport-reference[SMTP Transport] |Connectivity to SMTP servers.
|link:/mule-user-guide/v/3.3/smtp-transport-reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:/mule-user-guide/v/3.3/ssl-and-tls-transports-reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.3/stdio-transport-reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for ptesting.
|link:/mule-user-guide/v/3.3/tcp-transport-reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:/mule-user-guide/v/3.3/ssl-and-tls-transports-reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.3/udp-transport-reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:/mule-user-guide/v/3.3/vm-transport-reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|link:/mule-user-guide/v/3.3/mule-wmq-transport-reference[WebSphere MQ Transport] +
*Enterprise Edition* |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:/mule-user-guide/v/3.3/wsdl-connectors[WSDL Connectors] |The CXF Module allows remote web services to be invoked using their WSDL contract.
|link:/mule-user-guide/v/3.3/xmpp-transport-reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

== Transport Matrix

[cols=",,,,,,,,,,",options="header",]
|===
|Transport |Doc |Inbound |Outbound |Request |Transactions |Streaming |Retries |MEPs |Default MEP |Maven Artifact
|link:/mule-user-guide/v/3.3/ajax-transport-reference[AJAX] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/ajax/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ajax/namespace-overview.html[SchemaDoc] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way |one-way |org.mule.http://transportmule-transport-ajax[transport:mule-transport-ajax]

|link:/mule-user-guide/v/3.3/file-transport-reference[File] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/file/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_file/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way |one-way |org.mule.http://transportmule-transport-file[transport:mule-transport-file]

|link:/mule-user-guide/v/3.3/ftp-transport-reference[FTP] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/ftp-ee/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_ftp-ee/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |  |  |org.mule.http://transportmule-transport-ftp-ee[transport:mule-transport-ftp-ee]

|link:/mule-user-guide/v/3.3/https-transport-reference[HTTPS] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/http/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_https/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-https[transport:mule-transport-https]

|link:/mule-user-guide/v/3.3/imaps-transport-reference[IMAPS] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/email/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_imaps/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:error.png[image] |image:error.png[image] |image:error.png[image] |image:error.png[image] |image:error.png[image] |one-way |one-way |org.mule.http://transportmule-transport-imaps[transport:mule-transport-imaps]

|link:/mule-user-guide/v/3.3/jdbc-transport-reference[JDBC] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/jdbc-ee/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jdbc-ee/namespace-overview.html[SchemaDoc] |
image:error.png[image] |image:error.png[image] |image:error.png[image] |image:error.png[image] |image:error.png[image] |image:error.png[image] |  |  |org.mule.http://transportmule-transport-jdbc-ee[transport:mule-transport-jdbc-ee]

|link:/mule-user-guide/v/3.3/jetty-ssl-transport-reference[Jetty SSL] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/jetty/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_jetty%20ssl/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-jetty[transport:mule-transport-jetty] ssl

|link:/mule-user-guide/v/3.3/multicast-transport-reference[Multicast] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/multicast/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_multicast/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:error.png[image] |image:error.png[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-multicast[transport:mule-transport-multicast]

|link:/mule-user-guide/v/3.3/pop3s-transport-reference[POP3S] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/email/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_pop3s/namespace-overview.html[SchemaDoc] |
image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |image:error.png[image] |image:error.png[image] |one-way |one-way |org.mule.http://transportmule-transport-pop3s[transport:mule-transport-pop3s]

|link:/mule-user-guide/v/3.3/rmi-transport-reference[RMI] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/rmi/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_rmi/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:error.png[image] |image:error.png[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-rmi[transport:mule-transport-rmi]

|link:/mule-user-guide/v/3.3/sftp-transport-reference[SFTP] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/sftp/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_sftp/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way, request-response |one-way |org.mule.http://transportmule-transport-sftp[transport:mule-transport-sftp]

|link:/mule-user-guide/v/3.3/smtps-transport-reference[SMTPS] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/email/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_smtps/namespace-overview.html[SchemaDoc]
|image:error.png[image] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:error.png[image] |image:error.png[image] |one-way |one-way |org.mule.http://transportmule-transport-smtps[transport:mule-transport-smtps]

|link:/mule-user-guide/v/3.3/stdio-transport-reference[STDIO] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/stdio/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_stdio/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way |one-way |org.mule.http://transportmule-transport-stdio[transport:mule-transport-stdio]

|link:/mule-user-guide/v/3.3/tls-transport-reference[TLS] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/ssl/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_tls/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:error.png[image] |image:check.png[check] |image:error.png[image] |one-way, request-response |request-response |org.mule.http://transportmule-transport-tls[transport:mule-transport-tls]

|link:/mule-user-guide/v/3.3/vm-transport-reference[VM] |http://www.mulesoft.org/docs/site/3.3.0/apidocs/org/mule/transport/vm/package-summary.html[JavaDoc], http://www.mulesoft.org/docs/site/current3/schemadocs/namespaces/http_www_mulesoft_org_schema_mule_vm/namespace-overview.html[SchemaDoc]
|image:check.png[check] |image:check.png[check] |image:check.png[check] |image:check.png[check](XA) |image:check.png[check] |image:error.png[image] |one-way, request-response |one-way |org.mule.http://transportmule-transport-vm[transport:mule-transport-vm]

|===

=== Legend

*Transport* - The name/protocol of the transport +
*Docs* - Links to the JavaDoc and SchemaDoc for the transport +
*Inbound* - Whether the transport can receive inbound events and can be used for an inbound endpoint +
*Outbound* - Whether the transport can produce outbound events and be used with an outbound endpoint +
*Request* - Whether this endpoint can be queried directly with a request call (via MuleClient or the EventContext) +
*Transactions* - Whether transactions are supported by the transport. Transports that support transactions can be configured in either local or distributed two-phase commit (XA) transaction. +
*Streaming* - Whether this transport can process messages that come in on an input stream. This allows for very efficient processing of large data. For more information, see Streaming. +
*Retry* - Whether this transport supports retry policies. Note that all transports can be configured with Retry policies, but only the ones marked here are officially supported by MuleSoft +
*MEPs* - Message Exchange Patterns supported by this transport +
*Default MEP* - The default MEP for endpoints that use this transport that do not explicitly configure a MEP +
*Maven Artifact* - The group name a artifact name for this transport in http://maven.apache.org/[Maven]

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
